mobile horizontal scroll fix

--- a/cyph.im/css/cyph.scss
+++ b/cyph.im/css/cyph.scss
@@ -1,3 +1,8 @@
+html, body {
+	max-width: 100%;
+	overflow-x: hidden;
+}
+
 body, #loading, md-sidenav {
 	background-color: #8b62d9 !important;
 }
